Add workoutplans controller implementation
